--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -18,13 +18,16 @@
 \algrenewcommand\algorithmicrequire{\textbf{Precondition:}}
 \algrenewcommand\algorithmicensure{\textbf{Postcondition:}}
 
+
+\newcommand{\rooot}[1]{\text{root}(#1)}
 \newcommand{\leaf}[2]{\text{leaf}(#1, #2)}
+\newcommand{\sizze}[2]{\text{size}(#1, #2)}
 \newcommand{\depth}[2]{\text{depth}(#1, #2)}
 \newcommand{\degree}[2]{\text{degree}(#1, #2)}
 \newcommand{\edge}[3]{\text{edge}(#1, #2, #3)}
 \newcommand{\children}[2]{\text{children}(#1, #2)}
 \newcommand{\backwardsearch}[4]{\text{backward-search}(#1, [#2,#3], #4)}
-%\newcommand{\forwardsearch}[4]{\text{forward-search}(#1, [#2,#3], #4)}
+\newcommand{\forwardsearch}[4]{\text{forward-search}(#1, [#2,#3], #4)} % I've abbreviated away depth, char_pos
 \newcommand{\intervalsymbols}[3]{\text{interval-symbols}(#1, [#2,#3])}
 
 \DeclareMathOperator*{\Bigcdot}{\scalerel*{\cdot}{\bigodot}}
@@ -35,6 +38,7 @@
 \newcommand{\patdot}{\alpha \Bigcdot}
 \newcommand{\dotpatdot}{\Bigcdot \alpha \Bigcdot}
 \newcommand{\nlplus}[1]{N^{1+}(#1)} % note it's an little L in \nlplus not a 1
+\newcommand{\nlplusfunc}[3]{\textsc{N1Plus}(#1, #2, #3)} % note it's an little L in \nlplus not a 1
 
 \newcommand{\tf}{t_{\text{F}}}
 \newcommand{\tr}{t_{\text{R}}}
@@ -42,9 +46,14 @@
 \newcommand{\ar}{a_{\text{R}}}
 \newcommand{\nf}{n_{\text{F}}}
 \newcommand{\nr}{n_{\text{R}}}
+\newcommand{\trfull}{t_{\text{R}}^{\text{all}}}
+\newcommand{\nrfull}{n_{\text{R}}^{\text{all}}}
 \newcommand{\chf}{c_{\text{F}}}
 \newcommand{\chr}{c_{\text{R}}}
 
+\newcommand{\ws}{\textbf{w}}
+
+\newcommand{\Order}[1]{O(#1)}
 
 
 \title{Draft paper for CST LM work for submission to EMNLP}
@@ -80,13 +89,13 @@
     \Function{N1PlusFrontBack}{$\tf, \nf, \alpha$} 
         \Let{$o$}{$0$}
         \If{$\leaf{\tf}{\nf} \, \vee \, \depth{\tf}{\nf} > |\alpha|$}   \Comment{leaves and patterns internal to an edge}
-          \Let{$o$}{$\textsc{N1Plus}(\tr, \nr, \dotpat)$} \Comment{in forward \CST have only one right context}
+          \Let{$o$}{$\nlplusfunc{\tr}{\nr}{\dotpat}$} \Comment{in forward \CST have only one right context}
         \Else
            \For{$\chf \gets \children{\tf}{\nf}$} 
               \Let{$s$}{$\edge{\tf}{\chf}{1}$} \Comment{find the first symbol on the edge label}
               \Let{$\chr$}{$\backwardsearch{\ar}{\lb{\nr}}{\rb{\nr}}{s}$} \Comment{find child node in reverse \CST}
               \Statex    \Comment{$\ar$ is the \CSA component of $\tr$}
-              \Let{$o$}{$o + \textsc{N1Plus}(\tr, \chr, \dotpat s)$}
+              \Let{$o$}{$o + \nlplusfunc{\tr}{\chr}{\dotpat s}$}
             \EndFor
         \EndIf
       \State \Return{$o$}
@@ -116,7 +125,7 @@
     \Function{N1PlusFrontBack'}{$\tf, \nf, \alpha$} 
         \Let{$o$}{$0$}
         \If{$\leaf{\tf}{\nf} \, \vee \, \depth{\tf}{\nf} > |\alpha|$}   
-          \Let{$o$}{$\textsc{N1Plus}(\tr, \nr, \dotpat)$}
+          \Let{$o$}{$\nlplusfunc{\tr}{\nr}{\dotpat}$}
         \Else
             \For{$\langle l, r, s\rangle \gets \intervalsymbols{\af}{\lb{\nf}}{\rb{\nf}}$}
               \State Some voodoo with Weiner links
@@ -127,5 +136,65 @@
     \EndFunction
   \end{algorithmic}
 \end{algorithm}
+
+\begin{algorithm}
+  \caption{Compute Kneser-Ney probability, $P\big(w_k | w^{k-1}_{k-(n-1)}\big)$
+    \label{alg:pkn}}
+  \begin{algorithmic}[1]
+    \Function{ProbKneserNey}{$\tf, \tr, \ws, n$} 
+        \Let{$\nf$}{$\rooot{\tf}$} \Comment{match for context $w^{k-1}_{k-i}$}
+        \Let{$\nr$}{$\rooot{\tr}$} \Comment{match for context $w^{k-1}_{k-i}$}
+        \Let{$\nrfull$}{$\rooot{\tr}$} \Comment{match for $w^{k}_{k-i}$}
+        \Let{$p$}{$1$}
+        \For{$i \gets 1 \text{ to } n$}
+          \Let{$\nrfull$}{$\forwardsearch{\tr}{\lb{\nrfull}}{\rb{\nrfull}}{w_{k-i+1}}$} \Comment{update matches in \textsc{Cst}s}
+          \If{$i > 1$}
+             \Let{$\nf$}{$\backwardsearch{\tf}{\lb{\nf}}{\rb{\nf}}{w_{k-i+1}}$} %\Comment{update context match in fwd \CST}
+              \If{$i < n$}
+             \Let{$\nr$}{$\forwardsearch{\tr}{\lb{\nr}}{\rb{\nr}}{w_{k-i+1}}$} %\Comment{update context match in rev \CST}
+          \EndIf
+          \EndIf
+          \Let{$D$}{discount parameter for $n$-gram}
+          \If{$i = n$} % or if s == '<s>' 
+                 \Comment{compute the `count' for the full match}
+             \Let{$c$}{$\sizze{\trfull}{\nrfull}$} 
+          \Else
+             \Let{$c$}{$\nlplusfunc{\trfull}{\nrfull}{\Bigcdot w^{k-1}_{k-i+1}}$}
+           \EndIf
+           \If{$i > 1$}
+             \If{$\nf$ is valid} \Comment{compute backoff probability, or backoff for unseen contexts}
+                  \Let{$d$}{$\sizze{\tf}{\nf}$}
+                  \Let{$q$}{$\nlplusfunc{\tf}{\nf}{w^{k-1}_{k-i+1} \Bigcdot}$}
+                  \Let{$p$}{ $\frac{1}{d} \left( \max(c-D, 0)  + D  q  p \right)$}
+               \EndIf
+          \ElsIf{$i = 1$}
+             \Let{$p$}{$c  / \nlplus{\Bigcdot\Bigcdot}$}
+          \EndIf
+        \EndFor
+      \State \Return{$p$}
+    \EndFunction
+  \end{algorithmic}
+\end{algorithm}
+
+
+
+
+\begin{table}
+\begin{tabular}{p{0.27\textwidth}p{0.53\textwidth}p{0.15\textwidth}}
+\toprule
+Function & Description & Complexity \\
+\midrule
+$\leaf{t}{n}$ & tests if node $n$ is a leaf of the  $t$ & $\Order{1}$ \\
+$\depth{t}{n}$ & pattern length for the path from root to $n$ (inclusive) & $\Order{1} \text{~non-leaf;}$ $\Order{\cdots} \text{~leaf}$\\
+$\edge{t}{n}{k}$ & $k^{th}$ symbol in the edge label for node $n$ &  $\Order{\cdots}$ \\
+$\degree{t}{n}$ &  number of child nodes under parent $n$  &  $\Order{\cdots}$ \\
+$\children{t}{n}$ & list of child nodes under $n$  &  $\Order{\cdots}$ \\
+$\backwardsearch{a}{l}{r}{s}$ & finds the node in the  $a$ matching the pattern $s \alpha$, returning $[l',r']$ pair  &  $\Order{\cdots}$ \\
+%\forwardsearch}
+$\intervalsymbols{a}{l}{r}$ & finds the set of symbols preceeding pattern $\alpha$ matched by $[l, r]$; returns a list of tuples describing the bounds and the precedding symbol $\langle l, r, s\rangle$  &  $\Order{\cdots}$ \\
+\bottomrule
+\end{tabular}
+\caption{Summary of \CSA and \CST functions used and their time complexity of inference. The above assumes that $n$ or (equivalently) $[l, r]$ matches $\alpha$ in the \CSA $a$ and/or \CST $t$.}
+\end{table}
 
 \end{document}
