--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -85,6 +85,67 @@
 
 \section{Introduction}
 
+LMs important, critical aspects are speed and scale. One avenue of better LMs using NN; another
+better count based LMs to harness more data (e.g., stupid backoff). 
+
+We're the latter, but marrying large scale with KN smoothing (better method). Crux is how to compute
+the quantities (counts, occ counts). 
+
+Suffix trees / arrays / tries etc used in the past. Either precomputed (KLM/SRI) or on the fly (slow
+LREC paper). But doesn't scale. We propose compressed SA/ST methods, which scale to massive datasets.
+
+Brief outline of how the method works; using one or two suffix trees. Forward/backward search.
+
+Pata on experiments: pplx good; can scale to large n and massive corpora; adequate runtime
+performance, around 100x slower than SRILM. Reranking gains? Can we run with INFINITE order?
+
+\section{Background}
+
+\subsection{Suffix Arrays and Suffix Trees}
+
+Overview with pretty picture. E.g., character level CSA / CST for 
+'a quick brown fox jumped over the lazy dog' or similar.
+
+Including something on BWT \& self indexes.
+
+Forward and backward search.
+
+\subsection{Compressed Suffix Structures}
+
+WT, nested brackets CST, rank/select etc. Wiener links even?
+
+\section{Language Modelling}
+
+\subsection{Kneser Ney}
+
+Background, mathematical formulation.
+
+\subsection{Using \CST for KN Counting}
+
+Computing counts, N1+ of several flavours of different sized n-grams.
+
+\subsection{Dual \CST Algorithm} 
+
+Algorithm overview.
+
+Include paragraph on computing the discounts.
+
+\subsection{Complexity Analysis}
+
+\section{Improved single \CST approach}
+
+Just show N1+fb algo; leave rest to supporting material.
+
+\section{Experiments}
+
+\subsection{Datasets}
+
+\subsection{Perplexity Evaluation}
+
+\subsection{MT Reranking}
+
+
+
 \begin{algorithm*}
   \caption{Compute one-sided occurrence counts, $\nlplus{\dotpat}$ or $\nlplus{\patdot}$ for pattern string $\alpha$ 
     \label{alg:n1plus}}
@@ -293,8 +354,28 @@ $\intervalsymbols{a}{l}{r}$ & finds the set of symbols preceeding pattern $\alph
 \caption{Summary of \CSA and \CST functions used and their time complexity of inference. The above assumes that $n$ or (equivalently) $[l, r]$ matches $\alpha$ in the \CSA $a$ and/or \CST $t$.}
 \end{table*}
 
+\section{Related Work}
+
+\cite{brants2007large}
+\cite{guthrie2010storing}
+\cite{brants2006web}
+\cite{stolcke2011srilm}
+\cite{stolcke2002srilm}
+\cite{pauls2011faster}
+\cite{heafield2011kenlm}
+\cite{kennington2012suffix}
+\cite{wood2011sequence}
+\cite{chen1996empirical}
+\cite{kneser1995improved}
+\cite{chen1996empirical}
+\cite{navarro2007compressed}
+\cite{gog2014theory}
+
+\section{Conclusions}
+
+
 % include your own bib file like this:
 \bibliographystyle{acl}
-\bibliography{acl2015}
+\bibliography{Bibliography}
 
 \end{document}
