added suffix tree figure

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -13,6 +13,8 @@
 \usepackage{scalerel}
 \usepackage{scalerel}
 \usepackage[noend]{algpseudocode}
+\usepackage{tikz}
+\usetikzlibrary{trees}
 
 \newcommand*\Let[2]{\State #1 $\gets$ #2}
 \newcommand*\CSA{\textsc{Csa}\xspace}
