--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -1,6 +1,14 @@
 
 \subsection{Suffix Arrays and Suffix Trees}
 
+\begin{figure}
+\centering
+\scalebox{0.9}{
+\input{figures/fig-suffix-tree.tex}
+}
+\caption{Word-based Suffix Tree for the text ``the old night keeper keeps the keep in the town the night keeper keeps the keep in the night''.}
+\end{figure}
+
 Overview with pretty picture. E.g., character level CSA / CST for 
 'a quick brown fox jumped over the lazy dog' or similar.
 
