--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -3,10 +3,10 @@
 
 \begin{figure}
 \centering
-\scalebox{0.9}{
+%\scalebox{0.9}{
 \input{figures/fig-suffix-tree.tex}
-}
-\caption{Word-based Suffix Tree for the text ``the old night keeper keeps the keep in the town the night keeper keeps the keep in the night''.}
+%}
+\caption{Word-based Suffix Tree for the text ``the old night keeper keeps the keep in the town the night keeper keeps the keep in the night''. \matthias{Figure too big?}}
 \end{figure}
 
 Overview with pretty picture. E.g., character level CSA / CST for 
