--- a/paper/figures/fig-suffix-tree.tex
+++ b/paper/figures/fig-suffix-tree.tex
@@ -2,6 +2,8 @@
 \tikzstyle{leaf}=[draw=red!90,fill=red!40,rectangle,thick,minimum height=2.6ex,minimum width=2ex,inner sep=0pt]
 \tikzstyle{internal}=[fill=black,circle,inner sep=0pt,minimum size=1ex]
 
+\def\yscale{0.7}
+
 \begin{tikzpicture}
 % \draw [help lines] (0,0) grid (7,7);
 % \node at (0,0) {(0,0)};
@@ -9,57 +11,57 @@
 % \node at (0,7) {(0,7)};
 % \node at (7,7) {(7,7)};
 
-\node[internal] (root) at (3.5,7.5) {};
+\node[internal] (root) at (3.5,7.5*\yscale) {};
 
 % children of the root
-\node[leaf] (leaf-0) at (0,6.5) {\small$19$};
-\node[internal] (root-subtree-1) at (0.75,6) {};
-\node[internal] (root-subtree-2) at (1.75,5.7) {};
-\node[internal] (root-subtree-3) at (2.5,4.8) {};
-\node[internal] (root-subtree-4) at (3.25,4.75) {};
-\node[internal] (root-subtree-5) at (3.7,3.75) {};
-\node[leaf] (leaf-12) at (4.25,5) {\small$1$};
-\node[internal] (root-subtree-6) at (5.5,6) {};
-\node[leaf] (leaf-19) at (7,6.5) {\small$9$};
+\node[leaf] (leaf-0) at (0,6.5*\yscale) {\small$19$};
+\node[internal] (root-subtree-1) at (0.75,6.3*\yscale) {};
+\node[internal] (root-subtree-2) at (1.45,5.5*\yscale) {};
+\node[internal] (root-subtree-3) at (2.5,4.4*\yscale) {};
+\node[internal] (root-subtree-4) at (3.25,4.25*\yscale) {};
+\node[internal] (root-subtree-5) at (3.7,5*\yscale) {};
+\node[leaf] (leaf-12) at (4.25,5.4*\yscale) {\small$1$};
+\node[internal] (root-subtree-6) at (5.5,6*\yscale) {};
+\node[leaf] (leaf-19) at (7,6.5*\yscale) {\small$9$};
 
 %children of root-subtree-1
-\node[leaf] (leaf-1) at (0.1,5) {\small$16$};
-\node[leaf] (leaf-2) at (0.3,0.75) {\small$7$};
+\node[leaf] (leaf-1) at (0.1,5*\yscale) {\small$16$};
+\node[leaf] (leaf-2) at (0.3,0.75*\yscale) {\small$7$};
 
 %children of root-subtree-2
-\node[leaf] (leaf-3) at (0.9,3.5) {\small$15$};
-\node[leaf] (leaf-4) at (1.2,1) {\small$6$};
+\node[leaf] (leaf-3) at (0.9,3.5*\yscale) {\small$15$};
+\node[leaf] (leaf-4) at (1.2,1*\yscale) {\small$6$};
 
 %children of root-subtree-3
-\node[leaf] (leaf-5) at (1.9,3.5) {\small$12$};
-\node[leaf] (leaf-6) at (2.2,1.6) {\small$3$};
+\node[leaf] (leaf-5) at (1.75,3.3*\yscale) {\small$12$};
+\node[leaf] (leaf-6) at (2.2,1.6*\yscale) {\small$3$};
 
 %children of root-subtree-4
-\node[leaf] (leaf-7) at (2.7,3.5) {\small$13$};
-\node[leaf] (leaf-8) at (3.1,1.6) {\small$4$};
+\node[leaf] (leaf-7) at (2.7,3.1*\yscale) {\small$13$};
+\node[leaf] (leaf-8) at (3.1,1.3*\yscale) {\small$4$};
 
 %children of root-subtree-5
-\node[leaf] (leaf-9) at (3.5,2.5) {\small$18$};
-\node[internal] (subtree-5-subtree-1) at (4,1.5) {};
+\node[leaf] (leaf-9) at (3.5,2.5*\yscale) {\small$18$};
+\node[internal] (subtree-5-subtree-1) at (4,2*\yscale) {};
 
 %children of subtree-5-subtree-1
-\node[leaf] (leaf-10) at (3.6,0.5) {\small$11$};
-\node[leaf] (leaf-11) at (4.1,0) {\small$2$};
+\node[leaf] (leaf-10) at (3.6,0.5*\yscale) {\small$11$};
+\node[leaf] (leaf-11) at (4.1,0*\yscale) {\small$2$};
 
 %children of root-subtree-6
 
-\node[internal] (subtree-6-subtree-1) at (5,3.5) {};
-\node[internal] (subtree-6-subtree-2) at (5.9,3) {};
-\node[leaf] (leaf-17) at (6.3,4.5) {\small$0$};
-\node[leaf] (leaf-18) at (6.6,5.5) {\small$8$};
+\node[internal] (subtree-6-subtree-1) at (5,3.5*\yscale) {};
+\node[internal] (subtree-6-subtree-2) at (5.9,3.4*\yscale) {};
+\node[leaf] (leaf-17) at (6.3,4.5*\yscale) {\small$0$};
+\node[leaf] (leaf-18) at (6.6,5.5*\yscale) {\small$8$};
 
 %children of subtree-6-subtree-1
-\node[leaf] (leaf-13) at (4.5,2) {\small$14$};
-\node[leaf] (leaf-14) at (5,1) {\small$5$};
+\node[leaf] (leaf-13) at (4.5,2*\yscale) {\small$14$};
+\node[leaf] (leaf-14) at (5,1*\yscale) {\small$5$};
 
 %children of subtree-6-subtree-2
-\node[leaf] (leaf-15) at (5.6,1.5) {\small$17$};
-\node[leaf] (leaf-16) at (6.1,1) {\small$10$};
+\node[leaf] (leaf-15) at (5.6,1.5*\yscale) {\small$17$};
+\node[leaf] (leaf-16) at (6.1,1*\yscale) {\small$10$};
 
 
 % edge label mapping
@@ -76,53 +78,53 @@
 % edges from root to children
 \draw (root) -- (leaf-0.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$};
 \draw (root) -- (root-subtree-1)  node [sloped,midway,above=-3pt] {\tiny \tt the in};
-\draw (root) -- (root-subtree-2)  node [sloped,midway,above=-3pt] {\tiny \tt \ldots~in keep};
-\draw (root) -- (root-subtree-3)  node [sloped,midway,above=-3pt] {\tiny \tt \ldots~keeps keeper};
+\draw (root) -- (root-subtree-2)  node [sloped,midway,above=-3pt] {\tiny \tt the in keep};
+\draw (root) -- (root-subtree-3)  node [sloped,midway,above=-3pt] {\tiny \tt ..keeps keeper};
 \draw (root) -- (root-subtree-4)  node [sloped,midway,above=-3pt] {\tiny \tt in keeps};
 \draw (root) -- (root-subtree-5)  node [sloped,midway,above=-3pt] {\tiny \tt night};
-\draw (root) -- (leaf-12.north)  node [sloped,midway,above=-3pt] {\tiny \tt old\ldots\$};
+\draw (root) -- (leaf-12.north)  node [sloped,midway,above=-3pt] {\tiny \tt old..\$};
 \draw (root) -- (root-subtree-6)  node [sloped,midway,above=-3pt] {\tiny \tt the};
-\draw (root) -- (leaf-19.north)  node [midway,above=-3pt,sloped] {\tiny \tt town\ldots\$};
+\draw (root) -- (leaf-19.north)  node [midway,above=-3pt,sloped] {\tiny \tt town..\$};
 
 % edges from root-subtree-1 to children
 \draw (root-subtree-1) -- (leaf-1.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$night};
-\draw (root-subtree-1) -- (leaf-2.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$\ldots~keeper night the town};
+\draw (root-subtree-1) -- (leaf-2.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$..keeper night the town};
 
 % edges from root-subtree-2 to children
 \draw (root-subtree-2) -- (leaf-3.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$night};
-\draw (root-subtree-2) -- (leaf-4.north)  node [near end,above=-3pt,sloped] {\tiny \tt \ldots~the town};
+\draw (root-subtree-2) -- (leaf-4.north)  node [midway,above=-3pt,sloped] {\tiny \tt ..night the town};
 
 % edges from root-subtree-3 to children
 \draw (root-subtree-3) -- (leaf-5.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$night};
-\draw (root-subtree-3) -- (leaf-6.north)  node [midway,above=-3pt,sloped] {\tiny \tt \ldots~the town};
+\draw (root-subtree-3) -- (leaf-6.north)  node [midway,above=-3pt,sloped] {\tiny \tt ..the town};
 
 % edges from root-subtree-4 to children
 \draw (root-subtree-4) -- (leaf-7.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$night};
-\draw (root-subtree-4) -- (leaf-8.north)  node [midway,above=-3pt,sloped] {\tiny \tt \ldots~the town};
+\draw (root-subtree-4) -- (leaf-8.north)  node [midway,above=-3pt,sloped] {\tiny \tt ..the town};
 
 % edges from root-subtree-5 to children
 \draw (root-subtree-5) -- (leaf-9.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$};
-\draw (root-subtree-5) -- (subtree-5-subtree-1)  node [sloped,midway,above=-3pt] {\tiny \tt keeper keeps\ldots};
+\draw (root-subtree-5) -- (subtree-5-subtree-1)  node [sloped,midway,above=-3pt] {\tiny \tt keeper keeps..};
 
 % edges from subtree-5-subtree-1 to children
 \draw (subtree-5-subtree-1) -- (leaf-10.north)  node [midway,above=-3pt,sloped] {\tiny \tt \$night};
-\draw (subtree-5-subtree-1) -- (leaf-11.north)  node [sloped,midway,above=-3pt] {\tiny \tt 87\ldots\$};
+\draw (subtree-5-subtree-1) -- (leaf-11.north)  node [sloped,midway,above=-3pt] {\tiny \tt town..\$};
 
 
 % edges from root-subtree-6 to children
-\draw (root-subtree-6) -- (leaf-17.north)  node [sloped,midway,above=-3pt] {\tiny \tt old\ldots\$};
-\draw (root-subtree-6) -- (leaf-18.north)  node [sloped,midway,above=-3pt] {\tiny \tt town\ldots\$};
+\draw (root-subtree-6) -- (leaf-17.north)  node [sloped,midway,above=-3pt] {\tiny \tt old..\$};
+\draw (root-subtree-6) -- (leaf-18.north)  node [sloped,midway,above=-3pt] {\tiny \tt town..\$};
 \draw (root-subtree-6)  -- (subtree-6-subtree-1)  node [sloped,midway,above=-3pt] {\tiny \tt the in keep};
 \draw (root-subtree-6)  -- (subtree-6-subtree-2)  node [sloped,midway,above=-3pt] {\tiny \tt night};
 
 % edges from root-subtree-subtree-6-subtree-1 to children
 \draw (subtree-6-subtree-1)  -- (leaf-13.north)  node [sloped,midway,above=-3pt] {\tiny \tt \$night};
-\draw (subtree-6-subtree-1)  -- (leaf-14.north)  node [sloped,midway,above=-3pt] {\tiny \tt town\ldots\$};
+\draw (subtree-6-subtree-1)  -- (leaf-14.north)  node [sloped,midway,above=-3pt] {\tiny \tt town..\$};
 
 
 % edges from root-subtree-subtree-6-subtree-2 to children
 \draw (subtree-6-subtree-2)  -- (leaf-15.north)  node [sloped,midway,above=-3pt] {\tiny \tt \$};
-\draw (subtree-6-subtree-2)  -- (leaf-16.north)  node [sloped,midway,above=-3pt] {\tiny \tt keeper\ldots\$};
+\draw (subtree-6-subtree-2)  -- (leaf-16.north)  node [sloped,midway,above=-3pt] {\tiny \tt keeper..\$};
 
 
 \end{tikzpicture}
