changed suffix tree example string

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -50,3 +50,21 @@
 \newcommand{\ws}{\textbf{w}}
 
 \newcommand{\Order}[1]{O(#1)}
+
+%-- Sizes
+\newcommand\kb[1]{\mbox{$#1$\,kiB}}
+\newcommand\mb[1]{\mbox{$#1$\,MiB}}
+\newcommand\gb[1]{\mbox{$#1$\,GiB}}
+\newcommand\tb[1]{\mbox{$#1$\,TiB}}
+
+%-- Syms
+\newcommand{\col}{\ensuremath{\mathcal{T}}}  % collection
+\newcommand{\pattern}{\ensuremath{\mathcal{P}}}  % collection
+\newcommand{\plen}{\ensuremath{m}}
+\newcommand{\collen}{\ensuremath{n}} 
+\newcommand{\alphabet}{\ensuremath{\Sigma}} 
+\newcommand{\alphabetsize}{\ensuremath{\sigma}} 
+
+
+%-- ALG/DS
+\newcommand{\SA}{\mbox{\emph{SA}}}
