--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -1,12 +1,19 @@
 
 \subsection{Suffix Arrays and Suffix Trees}
 
+Given a text {\col} of size {\collen} drawn from an alphabet {\alphabet} of
+size {\alphabetsize}, the {\it suffix tree} of {\col} is the compact labeled
+tree where the root to leaf paths corresponds to all suffixes of {\col}.
+Figure~\ref{fig-suffix-tree}
+
 \begin{figure}
 \centering
 %\scalebox{0.9}{
 \input{figures/fig-suffix-tree.tex}
 %}
-\caption{Word-based Suffix Tree for the text ``the old night keeper keeps the keep in the town the night keeper keeps the keep in the night''. \matthias{Figure too big?}}
+\caption{Word-based Suffix Tree for the 
+text ``\# the old night keeper keeps the keep in the town \# the night keeper keeps the keep in the night \# \$''.}
+\label{fig-suffix-tree}
 \end{figure}
 
 Overview with pretty picture. E.g., character level CSA / CST for 
