working on the suffix section

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -16,7 +16,7 @@
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{tikz}
 \usepackage[all]{nowidow}
-\usetikzlibrary{trees}
+\usetikzlibrary{trees,matrix}
 
 \input{macros.tex}
 
