--- a/paper/local.bib
+++ b/paper/local.bib
@@ -37,6 +37,67 @@
 @string{ emnlp-conll = "Proc. EMNLP-CoNLL" }
 @string{ icassp = "Proc. ICASSP"}
 @string{ asru = "Proc. ASRU"}
+@string{ swat = "Proc. SWAT"}
+
+@article{k-spe99,
+  author    = {Stefan Kurtz},
+  title     = {Reducing the space requirement of suffix trees},
+  journal   = {Softw., Pract. Exper.},
+  volume    = {29},
+  number    = {13},
+  pages     = {1149--1171},
+  year      = {1999},
+  doi       = {10.1002/(SICI)1097-024X(199911)29:13<1149::AID-SPE274>3.0.CO;2-O}
+}
+
+@article{ksb-jacm06,
+  author    = {Juha K{\"{a}}rkk{\"{a}}inen and
+               Peter Sanders and
+               Stefan Burkhardt},
+  title     = {Linear work suffix array construction},
+  journal   = {J. {ACM}},
+  volume    = {53},
+  number    = {6},
+  pages     = {918--936},
+  year      = {2006},
+  url       = {http://doi.acm.org/10.1145/1217856.1217858},
+  doi       = {10.1145/1217856.1217858},
+  timestamp = {Tue, 06 Mar 2007 14:22:11 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jacm/KarkkainenSB06},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{mm-jcomp93,
+  author    = {Udi Manber and
+               Eugene W. Myers},
+  title     = {Suffix Arrays: {A} New Method for On-Line String Searches},
+  journal   = {{SIAM} J. Comput.},
+  volume    = {22},
+  number    = {5},
+  pages     = {935--948},
+  year      = {1993},
+  doi       = {10.1137/0222058}
+}
+
+@article{u-algo95,
+  author    = {Esko Ukkonen},
+  title     = {On-Line Construction of Suffix Trees},
+  journal   = {Algorithmica},
+  volume    = {14},
+  number    = {3},
+  pages     = {249--260},
+  year      = {1995},
+  doi       = {10.1007/BF01206331}
+}
+
+@inproceedings{w-swat73,
+  author    = {Peter Weiner},
+  title     = {Linear Pattern Matching Algorithms},
+  booktitle = swat,
+  pages     = {1--11},
+  year      = {1973},
+  doi       = {10.1109/SWAT.1973.13}
+}
 
 % Compression algorithms
 @article{nv-csurv07,
