--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -10,6 +10,8 @@
 \algrenewcommand\algorithmicrequire{\textbf{Precondition:}}
 \algrenewcommand\algorithmicensure{\textbf{Postcondition:}}
 
+\newcommand{\ngram}{$n$gram\xspace}
+\newcommand{\ngrams}{$n$grams\xspace}
 
 \newcommand{\rooot}[1]{\text{root}(#1)}
 \newcommand{\leaf}[2]{\text{leaf}(#1, #2)}
